--- a/css/stlye.css
+++ b/css/stlye.css
@@ -23,12 +23,9 @@ h1, h2 {
 .container {
     max-width: 1440px;
     width: 100%;
-    margin: auto;
-    padding-left: 1em;
-    padding-right: 1em;
 }
 
-.bloc {
+.bloc, .bloc-marseille {
     background-color: #F2F2F2;
 }
 
@@ -89,6 +86,9 @@ h1, h2 {
     line-height: 1.5em;
 }
 
+#searcher {
+    margin-bottom: 1em;
+}
 
 #body-search-btn {
     background-color: #0065FC;
@@ -129,14 +129,10 @@ h1, h2 {
     background-color: #DEEBFF;
 }
 
-#body-hosting {
-    padding-right: 2em;
+#first-bloc-last-part {
+    margin: 2em;
 }
 
-.body-hosting {
-    padding-top: 2em;
-    height: 525px;
-}
 
 .hosting-thumbnail-text {
     padding-left: 1em;
@@ -148,7 +144,6 @@ h1, h2 {
 }
 
 #body-hosting-marseille {
-    width: 60%; 
     padding-right: 5em;
     padding-left: 2em;
     margin-left: 2em;
@@ -386,6 +381,11 @@ h1, h2 {
 
 /* MOBILE*/ 
 @media (max-width: 705px){
+    .container {
+        max-width: 400px;
+        margin: auto;
+    }
+
     #header {
         display: none;
     }
@@ -445,17 +445,28 @@ h1, h2 {
     }
 
     #filter-solo-one {
-        color: red;
         width: 160px;
     }
 
     #filter-solo-two {
-        color: blue;
         width: 205px;
+    }
+
+    #first-bloc-last-part {
+       
     }
 
     #body-hosting {
         flex-direction: column;
+    }
+
+    .body-hosting {
+        padding-top: 2em;
+        height: 525px;
+    }
+
+    #body-hosting-popular-results {
+        align-self: center;
     }
 
     #body-hosting-marseille {
@@ -474,7 +485,18 @@ h1, h2 {
     }
 
     #body-hosting-popular {
-        padding-left: 0.5em;
+        width: 100%;
+        height: 530px;
+        margin-bottom: 3em;
+    }
+
+    #body-hosting-popular-title {
+        justify-content: space-between;
+        padding: 0 2em;
+    }
+
+    #body-hosting-popular  h2{
+        font-size: x-large;
     }
 
     .hosting-thumbnail {
@@ -563,8 +585,12 @@ h1, h2 {
 
 /* PAD */
 @media (min-width:706px) and (max-width: 1414px){
-    body {
-        background-color: black;
+    .container {
+        max-width: 1440px;
+        width: 100%;
+        margin: auto;
+        padding-left: 1em;
+        padding-right: 1em;
     }
     #header {
         display: none;
@@ -593,8 +619,14 @@ h1, h2 {
         display: none;
     }
     
+    .body-hosting {
+        padding-top: 2em;
+        height: 525px;
+    }
+
     #body-hosting {
-        flex-direction: column;  
+        flex-direction: column; 
+        padding-right: 2em; 
     }
     
     #body-hosting-marseille {
@@ -770,7 +802,16 @@ h1, h2 {
 
 /* Desktop */
 @media (min-width: 1415px){
+    .container {
+        max-width: 1440px;
+        width: 100%;
+        margin: auto;
+        padding-left: 1em;
+        padding-right: 1em;
+    }
+
     #body-hosting-marseille {
+        width: 60%;
         border-radius: 1em;
         padding-top: 2em;
         height: 525px;
@@ -789,6 +830,10 @@ h1, h2 {
         display: initial;
     }
 
+    #body-hosting {
+        padding-right: 2em;
+    }
+
     #body-hosting-marseille a {
         text-decoration: none;
         color: black;
@@ -803,8 +848,9 @@ h1, h2 {
 
     .body-hosting {
         border-radius: 1em;
+        padding-top: 2em;
+        height: 525px;
     }
-
     
     .hosting-thumbnail {
         background-color: white;
