--- a/css/stlye.css
+++ b/css/stlye.css
@@ -65,12 +65,12 @@ h1, h2 {
     text-decoration: black;
 }
 
-#register {
+#register, #register-mobile {
     color:#0065FC;
     font-weight: bold;
 }
 
-#register-parent, #register, a{
+#register-parent, #register-mobile, a{
     text-decoration: none;
 }
 
@@ -78,8 +78,6 @@ h1, h2 {
 
 #first-bloc {
     margin: auto;
-    padding-left: 2em;
-    padding-right: 2em;
 }
 
 #first-bloc p  {
@@ -383,7 +381,8 @@ h1, h2 {
 @media (max-width: 705px){
     .container {
         max-width: 400px;
-        margin: auto;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     #header {
@@ -404,7 +403,6 @@ h1, h2 {
         align-items: center;
         background-color: #0065FC ;
         border-radius: 10px;
-        height: px;
         width: 35px;
         margin-right: 0.5em;
     }
@@ -430,18 +428,30 @@ h1, h2 {
         text-decoration: black;
     }
 
+    
+    #first-bloc {
+        text-align: center;
+    }
+
     #first-bloc-text .bold {
         font-size: x-large;
+        text-align: center;
+        margin-top: 1em;
     }
 
     #searcher {
-        margin: 1.5em auto;
+        margin-top: 1em;
+        margin-left: auto;
         width: 300px;
     }
 
+    #filtres-title {
+
+    }
 
     #filtres {
         flex-direction: column;
+        align-items: flex-start;
     }
 
     #filter-solo-one {
@@ -453,7 +463,7 @@ h1, h2 {
     }
 
     #first-bloc-last-part {
-       
+       width: 350px;
     }
 
     #body-hosting {
@@ -494,6 +504,7 @@ h1, h2 {
         width: 100%;
         height: 530px;
         margin-bottom: 3em;
+        background-color: #F2F2F2;
     }
 
     #body-hosting-popular-title {
@@ -506,15 +517,23 @@ h1, h2 {
     }
 
     .hosting-thumbnail {
-        height: 250px;
-        width: 400px;
-
-        border-top-right-radius: 50px;
-        border-top-left-radius: 50px;
-        border-bottom-right-radius: 20px;
-        border-bottom-left-radius: 20px;
+        height: 260px;
+        width: 380px;
+        padding-left: 1%;
+        padding-right: 1%;
+        border-top-right-radius: 30px;
+        border-top-left-radius: 30px;
+        border-bottom-right-radius: 30px;
+        border-bottom-left-radius: 30px;
         box-shadow: 1px 1px 5px #F2F2F2;
         margin: 1em;
+    }
+
+    .hosting-thumbnail-text {
+        padding-left: 1em;
+        width: 355px;
+        border-bottom-right-radius: 20px;
+        border-bottom-left-radius: 20px;
     }
 
     .hosting-thumbnail-details {
@@ -524,9 +543,13 @@ h1, h2 {
     .hosting-thumbnail-photo {
         border-top-right-radius: 30px;
         border-top-left-radius: 30px;
-        width: 400px;
-        height: 180px;
+        width: 370px;
+        height: 170px;
         object-fit: cover;
+        margin-left: auto;
+        margin-right: auto;
+        padding-top: 5px;
+
     }
 
     .show-more {
@@ -615,6 +638,12 @@ h1, h2 {
     .menu-mobile-items a {
         text-decoration: none;
         color: black;
+        font-weight: bold;
+    }
+
+    #first-bloc {
+        padding-left: 2em;
+        padding-right: 2em;
     }
     
     #filtres {
@@ -676,7 +705,7 @@ h1, h2 {
     
     .hosting-thumbnail {
         background-color: white;
-        width: 260px; 
+        width: 250px; 
         height: 175px; 
         padding: 0.3em;
         margin: 1em;
@@ -834,6 +863,10 @@ h1, h2 {
         height: 525px;
     } 
 
+    #first-bloc {
+        padding-left: 2em;
+        padding-right: 2em;
+    }
 
     #filtres {
         align-items: center;
