--- a/css/stlye.css
+++ b/css/stlye.css
@@ -387,6 +387,30 @@ h1, h2 {
         display: initial;
     }
 
+    #menu-mobile a{
+        display: block;
+        text-align: center;
+        text-decoration: none;
+        color: black;
+        font-weight: bold;
+
+    }
+
+    .menu-mobile-items {
+        width: 50%;
+        padding-bottom: 10px;
+        border-bottom: solid;
+        border-color: #F2F2F2;
+        margin-top: 1em;
+        border-bottom: 3px solid #F2F2F2;
+    }
+
+    .menu-mobile-items:hover {
+        border-color: #0065FC;
+        color: #0065FC;
+        text-decoration: #0065FC;
+    }
+
     #search {
         border: 0px;
         border-top: 1px solid #F2F2F2;
@@ -416,24 +440,6 @@ h1, h2 {
         width: 35px;
         margin-right: 0.5em;
         margin-left: -5px;
-    }
-
-    #menu-mobile a{
-        text-decoration: none;
-        color: black;
-        font-weight: bold;
-    }
-
-    .menu-mobile-items {
-        padding-bottom: 10px;
-        border-bottom: solid;
-        border-color: #F2F2F2;
-        margin-top: 1em;
-    }
-
-    #menu-mobile a:hover {
-        border-color: #0065FC;
-        color: #0065FC;
     }
     
     #first-bloc {
