--- a/css/stlye.css
+++ b/css/stlye.css
@@ -559,7 +559,6 @@ h1, h2 {
 
     .hosting-thumbnail {
         height: 260px;
-        width: 360px;
         padding-left: 1%;
         padding-right: 1%;
         border-top-right-radius: 30px;
@@ -567,7 +566,7 @@ h1, h2 {
         border-bottom-right-radius: 30px;
         border-bottom-left-radius: 30px;
         box-shadow: 1px 1px 5px #F2F2F2;
-        margin: 1em;
+        margin-top: 1em;
     }
 
     .hosting-thumbnail-text {
