no margin mobile

--- a/css/stlye.css
+++ b/css/stlye.css
@@ -507,8 +507,8 @@ h1, h2 {
         margin-top: 1em;
         margin-bottom: 2em;
         margin-left: 1em;
-        font-size: medium;
-        width: 350px;
+        font-size: 15px;
+        width: 325px;
         text-align: left;
     }
 
@@ -559,8 +559,7 @@ h1, h2 {
 
     .hosting-thumbnail {
         height: 260px;
-        padding-left: 1%;
-        padding-right: 1%;
+        width: 340px;
         border-top-right-radius: 30px;
         border-top-left-radius: 30px;
         border-bottom-right-radius: 30px;
@@ -582,7 +581,7 @@ h1, h2 {
     .hosting-thumbnail-photo {
         border-top-right-radius: 30px;
         border-top-left-radius: 30px;
-        width: 340px;
+        width: 330px;
         height: 170px;
         object-fit: cover;
         margin-left: auto;
@@ -597,11 +596,11 @@ h1, h2 {
     }
 
     #activities-title {
+        margin-left: 0.6em;
         font-size: x-large;
         font-weight: bold;
         margin-top: 1em;
         margin-bottom: 1em;
-        
     }
 
     #activity-activities {
@@ -612,10 +611,10 @@ h1, h2 {
     
     .activities-thumbnail-big {
         height: 230px;
-        width: 380px;
+        width: 340px;
         background-color:white;
-        border-top-right-radius: 50px;
-        border-top-left-radius: 50px;
+        border-top-right-radius: 30px;
+        border-top-left-radius: 30px;
         border-bottom-right-radius: 20px;
         border-bottom-left-radius: 20px;
         box-shadow: 1px 1px 5px #F2F2F2;
@@ -624,7 +623,7 @@ h1, h2 {
     .activities-thumbnail-big-photo {
         border-top-right-radius: 30px;
         border-top-left-radius: 30px;
-        width: 380px;
+        width: 340px;
         height: 180px;
         object-fit: cover;
     }
@@ -643,7 +642,7 @@ h1, h2 {
     .activities-thumbnail-little-photo {
         border-top-right-radius: 30px;
         border-top-left-radius: 30px;
-        width: 380px;
+        width: 340px;
         height: 180px;
         object-fit: cover;
     }
